Fixed picklist height when in landscape on smaller devices.

--- a/content/css/themes/crm/base.less
+++ b/content/css/themes/crm/base.less
@@ -607,7 +607,6 @@ body > .viewContainer > .dialog {
   .picklist {
     height: auto;
     min-height: inherit;
-    max-height: 260px;
     position: relative;
     overflow: auto;
     margin: 0;
